--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">= 4.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -42,7 +42,9 @@
     "yaml-js": "^0.1.3"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^1.1.6"
+    "chai": "^3.5.0",
+    "cz-conventional-changelog": "^1.1.6",
+    "mocha": "^2.5.3"
   },
   "config": {
     "commitizen": {
